--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(${PROJECT_NAME}
         ${CMAKE_SOURCE_DIR}/src/game/main.cpp
         ${CMAKE_SOURCE_DIR}/src/game/main.hpp
+        src/game/gameMap.cpp
+        src/game/gameMap.hpp
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE raylib raylib_cpp)
