created VoxelGrid, SingleChunkGrid

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,9 @@ add_executable(${PROJECT_NAME}
         src/voxel/voxelMap.hpp
         src/voxel/VoxelMesher.cpp
         src/voxel/VoxelMesher.hpp
+        src/voxel/VoxelGrid.hpp
+        src/voxel/SingleChunkGrid.cpp
+        src/voxel/SingleChunkGrid.hpp
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
